--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^2.3.0"
+		"@sveltejs/adapter-cloudflare": "^2.3.0",
+		"@sveltejs/adapter-vercel": "^3.0.0"
 	}
 }
